Исправить замечания по чистоте кода и производительности.